<resources>
    <string name="app_name">Relish</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="whiteBackground">White background</string>
    <string name="login_greeting">Welcome back!</string>
    <string name="login_button">LOGIN</string>
    <string name="login_register_text">Not a member?</string>
    <string name="login_register_button">Register</string>
    <string name="signup_greeting">Welcome!\nPlease enter your details\nto create an account.</string>
    <string name="signup_already_member">Already a member?</string>
    <string name="hello_scrollable">HELLO</string>
    <string name="login_register_hyperlink"><a href="http://www.google.com">Register here!</a></string>
    <string name="chefsignupcont_note">Take note: picture will be\n compressed to a square</string>
    <string name="google_map_api_key">AIzaSyA-yspdBNdhlFSvglNSYqYPrxH8w2D8EuI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
