<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainTheme"
    android:paddingLeft="26dp"
    android:paddingRight="26dp"
    android:paddingTop="26dp"
    android:paddingBottom="26dp"
    android:id="@+id/signup_page"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/rounded_shape"
        android:contentDescription="@string/signup_greeting"/>

    <TextView
        android:id="@+id/signup_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo"
        app:layout_constraintVertical_bias="0.19999999" />

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/signup_greeting"
        android:onClick="takePicture"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@mipmap/relish_launcher" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_greeting"
        app:layout_constraintTop_toBottomOf="@+id/signup_greeting"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_email"
        app:layout_constraintTop_toBottomOf="@+id/signup_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup_register_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/login_register_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/button"/>

    <TextView
        android:id="@+id/signup_alreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_already_member"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/signup_register_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_register_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_register_button"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/signup_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:minHeight="0dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="@+id/signup_alreadyMember"
        app:layout_constraintStart_toEndOf="@+id/signup_alreadyMember"
        app:layout_constraintTop_toTopOf="@+id/signup_alreadyMember" />
</androidx.constraintlayout.widget.ConstraintLayout>