<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "26dp"
    android:background="@color/mainTheme"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/whiteBackground"
        android:background="@drawable/rounded_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints="email"
        android:hint="Username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.518" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@mipmap/relish_launcher" />

    <TextView
        android:id="@+id/login_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_greeting"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/login_button"
        android:backgroundTint="@color/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register here!"
        app:layout_constraintBottom_toBottomOf="@+id/login_register_text"
        app:layout_constraintStart_toEndOf="@+id/login_register_text"
        app:layout_constraintTop_toTopOf="@+id/login_register_text" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:text="Testing JSON"
        app:layout_constraintEnd_toEndOf="@+id/login_signup"
        app:layout_constraintStart_toStartOf="@+id/login_register_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>